--- a/ui/package.json
+++ b/ui/package.json
@@ -26,6 +26,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bulma": "^0.8.0",
     "cross-env": "^7.0.0",
     "electron-is-dev": "^1.1.0",
     "react": "^16.12.0",
@@ -67,5 +68,8 @@
     "electron-builder": "^22.3.2",
     "typescript": "^3.7.5",
     "wait-on": "^4.0.0"
-  }
+  },
+  "rescripts": [
+    "env"
+  ]
 }
