--- a/ui/package.json
+++ b/ui/package.json
@@ -26,7 +26,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "asar": "^2.1.0",
     "bulma": "^0.8.0",
+    "child_process": "^1.0.2",
     "cross-env": "^7.0.0",
     "electron-is-dev": "^1.1.0",
     "react": "^16.12.0",
@@ -71,5 +73,6 @@
   },
   "rescripts": [
     "env"
-  ]
+  ],
+  "extraResources": "python_scripts"
 }
